MINOR-BUGFIX: Fixed footer display issue (white space between footer and window bottom).

--- a/client/css/SearchAutocompletion.css
+++ b/client/css/SearchAutocompletion.css
@@ -1,6 +1,6 @@
 
 .silvercart-search-autocompletion-results {
-    display: inline-block;
+    display: none;
     width: 0px;
     height: 0px;
     overflow: visible;
